# a-eye_web_dev_jeremy

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  VM_DEPLOY.md  app.py  apptainer.ipynb  config.py  docker-compose.https-local.yml  docker-compose.prod.yml  docker-compose.vm.yml  docker-compose.yml  gunicorn.conf.py  main.py  models.py  nginx.conf  nginx.https-local.conf  nginx.local.conf  ngrok.service  nnunetv2_inference.sh  pyproject.toml  requirements.txt  routes.py  run.py  traefik-dynamic.yml  traefik.yml  user_paths.py  utilities.py  utils.py  whitelist.json
data/: stats.json
documentation/: Sources_&_LLM_usages.md  biomarkers_extraction.md  cheat_sheet.md  docker_cheat_sheet.md  improvements.md  initialisation.md  map_v0.md  metadata.md  multi_users_segmentation.md  quadrant_segmentation.md  segmentation_results.md  segmentation_slurm.md  statistical_analysis.md
jobfiles/: nnunet_inference.sh  nnunet_inference_template.sh  nnunetv1_inference.sh  nnunetv2_inference.sh
module/: quadrant.py
pruebas/: check_dicom_folder_name.ipynb  check_filenames.ipynb  convert_to_nifti.ipynb  copy_file.py  copy_folder.ipynb  docker-nnunet-cheatsheet.ipynb  docker_command.ipynb  password_encryption.ipynb  print_and_log.ipynb  unzip.ipynb  zip_unzip.ipynb
scripts/: generate-local-cert.sh
services/: aeyeweb-certbot-renew.service  aeyeweb-certbot-renew.timer  aeyeweb.service
static/: LICENSE.txt
templates/: about.html  base.html  error.html  faq.html  index.html  informations.html  login.html  profile.html  register.html  segmentation.html  users.html  (+2 more)
(+35 files in other folders)
