[project]
name = "a-eye-web-dev-jeremy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.7.2",
    "dicom2nifti>=2.6.2",
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "gunicorn>=26.0.0",
    "nibabel>=5.4.2",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "plotly>=6.8.0",
    "polars>=1.42.1",
    "py7zr>=1.1.3",
    "pycountry>=26.2.16",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "six>=1.17.0",
    "werkzeug>=3.1.8",
]

[tool.ruff.lint]
select = ["I"]

[tool.ruff.format]
preview = true
